--- a/index.html
+++ b/index.html
@@ -58,11 +58,14 @@
             padding: 10px; /* Espaciado interno */
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra sutil */
             opacity: 0; /* Inicialmente oculto */
-            transition: opacity 0.5s ease; /* Transición suave para la opacidad */
+            transition: opacity 0.5s ease, background-color 0.3s; /* Transición suave para la opacidad y el color de fondo */
             position: absolute; /* Posición absoluta para superponer cartas */
         }
         .card.active {
             opacity: 1; /* Mostrar la carta activa */
+        }
+        .card:hover {
+            background-color: #e0e0e0; /* Color más oscuro al pasar el cursor */
         }
         .button-container {
             text-align: center; /* Centrar los botones */
@@ -97,18 +100,23 @@
             <div class="column">
                 <div class="column-title">ENFOQUE CLASICO</div>
                 <div class="card active" id="card1">
-                    <img src="ruta/a/imagen1.jpg" alt="Autor 1"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Autor 1</h4>
-                    <p><strong>Concepto:</strong> Concepto del autor 1.</p>
-                    <p><strong>Teorías:</strong> Teoría del autor 1.</p>
-                    <p><strong>Principios:</strong> Principios del autor 1.</p>
+                    <img src="adm/taylor.jpg" alt="Frederick Taylor"> <!-- Cambia esta ruta por la de la imagen del autor -->
+                    <h4>Frederick Taylor (1856-1915)</h4>
+                    <p><strong>Concepto:</strong> Se basa en la racionalización del trabajo para aumentar la eficiencia y la productividad mediante métodos científicos.</p>
+                    <p><strong>Teoría:</strong><br>
+                    - Planificación: Uso de procedimientos científicos en lugar de improvisación.<br>
+                    - Preparación: Selección y formación de trabajadores.<br>
+                    - Control: Supervisión constante para garantizar estándares.<br>
+                    - Ejecución: División clara entre planeación y ejecución.</p>
+                    <p><strong>Principio:</strong> No hay principio</p>
                 </div>
                 <div class="card" id="card2">
-                    <img src="ruta/a/imagen2.jpg" alt="Autor 2"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Autor 2</h4>
-                    <p><strong>Concepto:</strong> Concepto del autor 2.</p>
-                    <p><strong>Teorías:</strong> Teoría del autor 2.</p>
-                    <p><strong>Principios:</strong> Principios del autor 2.</p>
+                    <img src="adm/fayol.jpg" alt="Henri Fayol"> <!-- Cambia esta ruta por la de la imagen del autor -->
+                    <h4>Henri Fayol (1841-1925)</h4>
+                    <p><strong>Concepto:</strong> La administración es un proceso basado en principios generales aplicables a cualquier organización.</p>
+                    <p><strong>Teoría:</strong><br>
+                    14 principios administrativos, entre ellos: División del trabajo, Autoridad, Unidad de mando, Jerarquía y Coordinación.</p>
+                    <p><strong>Principio:</strong> 5 funciones del directivo: Planificación, Organización, Coordinación, Dirección y Control.</p>
                 </div>
             </div>
 
@@ -116,18 +124,23 @@
             <div class="column">
                 <div class="column-title">ENFOQUE DEL COMPORTAMIENTO</div>
                 <div class="card active" id="card3">
-                    <img src="ruta/a/imagen3.jpg" alt="Autor 3"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Autor 3</h4>
-                    <p><strong>Concepto:</strong> Concepto del autor 3.</p>
-                    <p><strong>Teorías:</strong> Teoría del autor 3.</p>
-                    <p><strong>Principios:</strong> Principios del autor 3.</p>
+                    <img src="adm/weber.jpg" alt="Max Weber"> <!-- Cambia esta ruta por la de la imagen del autor -->
+                    <h4>Max Weber (1864-1920)</h4>
+                    <p><strong>Concepto:</strong> Plantea la burocracia como una estructura organizacional basada en normas, jerarquía y división del trabajo.</p>
+                    <p><strong>Teoría:</strong><br>
+                    3 tipos de autoridad:<br>
+                    1. Tradicional: Basada en costumbre y herencia.<br>
+                    2. Carismática: Basada en las cualidades del líder.<br>
+                    3. Racional legal: Basada en normas y procedimientos.</p>
+                    <p><strong>Principio:</strong> Jerarquía, reglas escritas, profesionalización y separación entre propiedad y administración.</p>
                 </div>
                 <div class="card" id="card4">
-                    <img src="ruta/a/imagen4.jpg" alt="Autor 4"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Autor 4</h4>
-                    <p><strong>Concepto:</strong> Concepto del autor 4.</p>
-                    <p><strong>Teorías:</strong> Teoría del autor 4.</p>
-                    <p><strong>Principios:</strong> Principios del autor 4.</p>
+                    <img src="adm/mayo.jpg" alt="Elton Mayo"> <!-- Cambia esta ruta por la de la imagen del autor -->
+                    <h4>Elton Mayo (1880-1949)</h4>
+                    <p><strong>Concepto:</strong> Introduce la importancia de los factores sociales y psicológicos en la productividad.</p>
+                    <p><strong>Teoría:</strong><br>
+                    Estudios de Hawthorne: Motivación influenciada por relaciones humanas y condiciones sociales.</p>
+                    <p><strong>Principio:</strong> No hay principios</p>
                 </div>
             </div>
 
@@ -135,18 +148,20 @@
             <div class="column">
                 <div class="column-title">ENFOQUE MODERNO</div>
                 <div class="card active" id="card5">
-                    <img src="ruta/a/imagen5.jpg" alt="Autor 5"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Autor 5</h4>
-                    <p><strong>Concepto:</strong> Concepto del autor 5.</p>
-                    <p><strong>Teorías:</strong> Teoría del autor 5.</p>
-                    <p><strong>Principios:</strong> Principios del autor 5.</p>
+                    <img src="adm/maslow.jpg" alt="Abraham Maslow"> <!-- Cambia esta ruta por la de la imagen del autor -->
+                    <h4>Abraham Maslow (1908-1970)</h4>
+                    <p><strong>Concepto:</strong> La motivación se basa en una jerarquía de necesidades humanas.</p>
+                    <p><strong>Teoría:</strong><br>
+                    Pirámide de Maslow: Fisiológicas, Seguridad, Sociales, Estima y Autorrealización.</p>
+                    <p><strong>Principio:</strong> No hay principio</p>
                 </div>
                 <div class="card" id="card6">
-                    <img src="ruta/a/imagen6.jpg" alt="Autor 6"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Autor 6</h4>
-                    <p><strong>Concepto:</strong> Concepto del autor 6.</p>
-                    <p><strong>Teorías:</strong> Teoría del autor 6.</p>
-                    <p><strong>Principios:</strong> Principios del autor 6.</p>
+                    <img src="adm/von.jpg" alt="Ludwig von Bertalanffy"> <!-- Cambia esta ruta por la de la imagen del autor -->
+                    <h4>Ludwig von Bertalanffy (1901-1972)</h4>
+                    <p><strong>Concepto:</strong> La organización es un sistema abierto que interactúa con su entorno.</p>
+                    <p><strong>Teoría:</strong><br>
+                    Elementos del sistema: Entrada, Proceso, Salida, Retroalimentación y Ambiente.</p>
+                    <p><strong>Principio:</strong> No hay principio</p>
                 </div>
             </div>
         </div>
