--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         }
         .card img {
             width: 100%; /* Ancho completo para las imágenes */
-            height: 150px; /* Altura fija para las imágenes */
-            object-fit: cover; /* Mantener la proporción de la imagen */
+            height: 300px; /* Altura máxima para las imágenes */
+            object-fit: contain; /* Mantener la proporción de la imagen y encuadrarla */
             border-radius: 8px; /* Bordes redondeados para las imágenes */
         }
         .button-container {
