--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             border: 1px solid #4E3B31; /* Borde café */
             border-radius: 8px;
             background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco semi-transparente */
+            max-width: 1200px; /* Ancho máximo del contenedor */
+            margin: 0 auto; /* Centrar el contenedor */
         }
         .theories-title {
             text-align: center; /* Centrar el texto */
