--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
         .section {
             margin-bottom: 40px; /* Espacio debajo de cada sección */
-            padding: 40px; /* Aumentar el padding para hacer el cuadro más grande */
+            padding: 40px; /* Espaciado interno */
             border: 1px solid #4E3B31; /* Borde café */
             border-radius: 8px;
             background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco semi-transparente */
@@ -41,59 +41,6 @@
             border-radius: 10px; /* Bordes redondeados */
             margin-bottom: 20px; /* Espacio debajo del título */
         }
-        .container {
-            display: flex; /* Usar flexbox para alinear las partes */
-            justify-content: space-between; /* Espacio entre columnas */
-            align-items: flex-start; /* Alinear al inicio */
-        }
-        .column {
-            position: relative; /* Posición relativa para superponer cartas */
-            width: 30%; /* Ancho de cada columna */
-            height: auto; /* Altura automática para las columnas */
-        }
-        .card {
-            background: #f9f9f9; /* Fondo de las cartas */
-            border: 1px solid #ddd; /* Borde de las cartas */
-            border-radius: 8px; /* Bordes redondeados */
-            width: 100%; /* Ancho completo para las cartas */
-            text-align: center; /* Centrar texto */
-            padding: 10px; /* Espaciado interno */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Sombra sutil */
-            opacity: 0; /* Inicialmente oculto */
-            transition: opacity 0.5s ease, background-color 0.3s; /* Transición suave para la opacidad y el color de fondo */
-            position: absolute; /* Posición absoluta para superponer cartas */
-        }
-        .card.active {
-            opacity: 1; /* Mostrar la carta activa */
-        }
-        .card:hover {
-            background-color: #e0e0e0; /* Color más oscuro al pasar el cursor */
-        }
-        .card img {
-            width: 100%; /* Ancho completo para las imágenes */
-            height: 300px; /* Altura máxima para las imágenes */
-            object-fit: contain; /* Mantener la proporción de la imagen y encuadrarla */
-            border-radius: 8px; /* Bordes redondeados para las imágenes */
-        }
-        .button-container {
-            text-align: center; /* Centrar los botones */
-            margin-top: 10px; /* Espacio arriba de los botones */
-        }
-        .button {
-            background-color: #FF7F7F; /* Color del botón */
-            color: white; /* Color del texto del botón */
-            border: none; /* Sin borde */
-            border-radius: 5px; /* Bordes redondeados */
-            padding: 10px 15px; /* Espaciado interno */
-            cursor: pointer; /* Cambiar cursor al pasar sobre el botón */
-            margin: 5px; /* Espacio alrededor del botón */
-        }
-        .column-title {
-            text-align: center; /* Centrar el texto del título de la columna */
-            font-weight: bold; /* Negrita para el título */
-            margin-bottom: 10px; /* Espacio debajo del título */
-            color: #333; /* Color del texto */
-        }
     </style>
 </head>
 <body>
@@ -102,135 +49,8 @@
 
     <div class="section">
         <div class="theories-title">PRINCIPALES TEORIAS DE LA ADMINISTRACION</div>
-
-        <div class="container">
-            <!-- Primera columna -->
-            <div class="column">
-                <div class="column-title">ENFOQUE CLASICO</div>
-                <div class="card active" id="card1">
-                    <img src="adm/taylor.jpg" alt="Frederick Taylor"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Frederick Taylor (1856-1915)</h4>
-                    <p><strong>Concepto:</strong> Se basa en la racionalización del trabajo para aumentar la eficiencia y la productividad mediante métodos científicos.</p>
-                    <p><strong>Teoría:</strong><br>
-                    - Planificación: Uso de procedimientos científicos en lugar de improvisación.<br>
-                    - Preparación: Selección y formación de trabajadores.<br>
-                    - Control: Supervisión constante para garantizar estándares.<br>
-                    - Ejecución: División clara entre planeación y ejecución.</p>
-                    <p><strong>Principio:</strong> No hay principio</p>
-                </div>
-                <div class="card" id="card2">
-                    <img src="adm/fayol.jpg" alt="Henri Fayol"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Henri Fayol (1841-1925)</h4>
-                    <p><strong>Concepto:</strong> La administración es un proceso basado en principios generales aplicables a cualquier organización.</p>
-                    <p><strong>Teoría:</strong><br>
-                    14 principios administrativos, entre ellos: División del trabajo, Autoridad, Unidad de mando, Jerarquía y Coordinación.</p>
-                    <p><strong>Principio:</strong> 5 funciones del directivo: Planificación, Organización, Coordinación, Dirección y Control.</p>
-                </div>
-                <div class="card" id="card3">
-                    <img src="adm/weber.jpg" alt="Max Weber"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Max Weber (1864-1920)</h4>
-                    <p><strong>Concepto:</strong> Plantea la burocracia como una estructura organizacional basada en normas, jerarquía y división del trabajo.</p>
-                    <p><strong>Teoría:</strong><br>
-                    3 tipos de autoridad:<br>
-                    1. Tradicional: Basada en costumbre y herencia.<br>
-                    2. Carismática: Basada en las cualidades del líder.<br>
-                    3. Racional legal: Basada en normas y procedimientos.</p>
-                    <p><strong>Principio:</strong> Jerarquía, reglas escritas, profesionalización y separación entre propiedad y administración.</p>
-                </div>
-            </div>
-
-            <!-- Segunda columna -->
-            <div class="column">
-                <div class="column-title">ENFOQUE DEL COMPORTAMIENTO</div>
-                <div class="card active" id="card4">
-                    <img src="adm/mayo.jpg" alt="Elton Mayo"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Elton Mayo (1880-1949)</h4>
-                    <p><strong>Concepto:</strong> Introduce la importancia de los factores sociales y psicológicos en la productividad.</p>
-                    <p><strong>Teoría:</strong><br>
-                    Estudios de Hawthorne: Motivación influenciada por relaciones humanas y condiciones sociales.</p>
-                    <p><strong>Principio:</strong> No hay principios</p>
-                </div>
-                <div class="card" id="card5">
-                    <img src="adm/maslow.jpg" alt="Abraham Maslow"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Abraham Maslow (1908-1970)</h4>
-                    <p><strong>Concepto:</strong> La motivación se basa en una jerarquía de necesidades humanas.</p>
-                    <p><strong>Teoría:</strong><br>
-                    Pirámide de Maslow: Fisiológicas, Seguridad, Sociales, Estima y Autorrealización.</p>
-                    <p><strong>Principio:</strong> No hay principio</p>
-                </div>
-            </div>
-
-            <!-- Tercera columna -->
-            <div class="column">
-                <div class="column-title">ENFOQUE MODERNO</div>
-                <div class="card active" id="card6">
-                    <img src="adm/von.jpg" alt="Ludwig von Bertalanffy"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Ludwig von Bertalanffy (1901-1972)</h4>
-                    <p><strong>Concepto:</strong> La organización es un sistema abierto que interactúa con su entorno.</p>
-                    <p><strong>Teoría:</strong><br>
-                    Elementos del sistema: Entrada, Proceso, Salida, Retroalimentación y Ambiente.</p>
-                    <p><strong>Principio:</strong> No hay principio</p>
-                </div>
-                <div class="card" id="card7">
-                    <img src="adm/contingencial.jpg" alt="Enfoque Contingencial"> <!-- Cambia esta ruta por la de la imagen del autor -->
-                    <h4>Enfoque Contingencial</h4>
-                    <p><strong>Autor:</strong> Paul Lawrence, Jay Lorsch, Joan Woodward.</p>
-                    <p><strong>Concepto:</strong> No hay una única forma de administrar; la estructura debe adaptarse al contexto.</p>
-                    <p><strong>Teoría:</strong><br>
-                    - Variables clave:<br>
-                    1. Ambiente: Estable o inestable.<br>
-                    2. Tecnología: Impacta la estructura organizativa.<br>
-                    3. Estructura organizativa: Debe ajustarse a condiciones externas.</p>
-                    <p><strong>Principio:</strong> No hay principio</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="button-container">
-            <button class="button" onclick="prevCard()">Anterior</button>
-            <button class="button" onclick="nextCard()">Siguiente</button>
-        </div>
+        <!-- Aquí se agregarían las tarjetas más adelante -->
     </div>
-
-    <script>
-        let currentCardIndex1 = 0;
-        let currentCardIndex2 = 0;
-        let currentCardIndex3 = 0;
-
-        const cards1 = document.querySelectorAll('#card1, #card2, #card3');
-        const cards2 = document.querySelectorAll('#card4, #card5');
-        const cards3 = document.querySelectorAll('#card6, #card7');
-
-        function showCard(cards, currentIndex) {
-            cards.forEach((card, index) => {
-                card.classList.remove('active'); // Ocultar todas las cartas
-                if (index === currentIndex) {
-                    card.classList.add('active'); // Mostrar la carta activa
-                }
-            });
-        }
-
-        function nextCard() {
-            currentCardIndex1 = (currentCardIndex1 + 1) % cards1.length; // Cambiar índice de la primera columna
-            currentCardIndex2 = (currentCardIndex2 + 1) % cards2.length; // Cambiar índice de la segunda columna
-            currentCardIndex3 = (currentCardIndex3 + 1) % cards3.length; // Cambiar índice de la tercera columna
-            showCard(cards1, currentCardIndex1);
-            showCard(cards2, currentCardIndex2);
-            showCard(cards3, currentCardIndex3);
-        }
-
-        function prevCard() {
-            currentCardIndex1 = (currentCardIndex1 - 1 + cards1.length) % cards1.length; // Cambiar índice de la primera columna
-            currentCardIndex2 = (currentCardIndex2 - 1 + cards2.length) % cards2.length; // Cambiar índice de la segunda columna
-            currentCardIndex3 = (currentCardIndex3 - 1 + cards3.length) % cards3.length; // Cambiar índice de la tercera columna
-            showCard(cards1, currentCardIndex1);
-            showCard(cards2, currentCardIndex2);
-            showCard(cards3, currentCardIndex3);
-        }
-
-        // Cambiar automáticamente cada 7 segundos
-        setInterval(nextCard, 7000);
-    </script>
 
 </body>
 </html>
