--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
         .section {
             margin-bottom: 40px; /* Espacio debajo de cada sección */
-            padding: 40px; /* Espaciado interno */
+            padding: 60px; /* Aumentar el padding para hacer el cuadro más grande */
             border: 1px solid #4E3B31; /* Borde café */
             border-radius: 8px;
             background-color: rgba(255, 255, 255, 0.9); /* Fondo blanco semi-transparente */
