--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         }
         .card:hover {
             background-color: #e0e0e0; /* Color más oscuro al pasar el cursor */
+            cursor: pointer; /* Cambiar cursor al pasar sobre la tarjeta */
         }
         .card img {
             width: 100%; /* Ancho completo para las imágenes */
