--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         let currentCardIndex2 = 0;
         let currentCardIndex3 = 0;
 
-        const cards1 = document.querySelectorAll('#card1, #card2, #card3');
+        const cards1 = document.querySelectorAll('#card1', '#card2', '#card3');
         const cards2 = document.querySelectorAll('#card4, #card5');
         const cards3 = document.querySelectorAll('#card6, #card7');
 
