--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             opacity: 0; /* Inicialmente oculto */
             transition: opacity 0.5s ease, background-color 0.3s; /* Transición suave para la opacidad y el color de fondo */
             user-select: text; /* Permitir selección de texto */
+            position: relative; /* Mantener la posición relativa */
         }
         .card.active {
             opacity: 1; /* Mostrar la carta activa */
